k8s/overlays/staging/init-container-patches.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: motherstream
spec:
  template:
    spec:
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: motherstream
  namespace: motherstream
spec:
  template:
    spec:
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oryx
  namespace: motherstream
spec:
  template:
    spec:
